--- a/notebooks/WGAN_GP.ipynb
+++ b/notebooks/WGAN_GP.ipynb
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {
     "scrolled": false
    },
@@ -398,29 +398,29 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_1 (InputLayer)         [(None, 1, 1, 150)]       0         \n",
+      "input_18 (InputLayer)        [(None, 1, 1, 150)]       0         \n",
       "_________________________________________________________________\n",
-      "up_conv2d (UpConv2D)         (None, 5, 5, 1200)        4500000   \n",
+      "up_conv2d_42 (UpConv2D)      (None, 5, 5, 1200)        4500000   \n",
       "_________________________________________________________________\n",
-      "batch_norm (BatchNorm)       (None, 5, 5, 1200)        4800      \n",
+      "batch_norm_33 (BatchNorm)    (None, 5, 5, 1200)        4800      \n",
       "_________________________________________________________________\n",
-      "re_lu (ReLU)                 (None, 5, 5, 1200)        0         \n",
+      "re_lu_33 (ReLU)              (None, 5, 5, 1200)        0         \n",
       "_________________________________________________________________\n",
-      "up_conv2d_1 (UpConv2D)       (None, 25, 25, 1200)      23040000  \n",
+      "up_conv2d_43 (UpConv2D)      (None, 25, 25, 1200)      23040000  \n",
       "_________________________________________________________________\n",
-      "batch_norm_1 (BatchNorm)     (None, 25, 25, 1200)      4800      \n",
+      "batch_norm_34 (BatchNorm)    (None, 25, 25, 1200)      4800      \n",
       "_________________________________________________________________\n",
-      "re_lu_1 (ReLU)               (None, 25, 25, 1200)      0         \n",
+      "re_lu_34 (ReLU)              (None, 25, 25, 1200)      0         \n",
       "_________________________________________________________________\n",
-      "up_conv2d_2 (UpConv2D)       (None, 50, 50, 600)       11520000  \n",
+      "up_conv2d_44 (UpConv2D)      (None, 50, 50, 600)       11520000  \n",
       "_________________________________________________________________\n",
-      "batch_norm_2 (BatchNorm)     (None, 50, 50, 600)       2400      \n",
+      "batch_norm_35 (BatchNorm)    (None, 50, 50, 600)       2400      \n",
       "_________________________________________________________________\n",
-      "re_lu_2 (ReLU)               (None, 50, 50, 600)       0         \n",
+      "re_lu_35 (ReLU)              (None, 50, 50, 600)       0         \n",
       "_________________________________________________________________\n",
-      "up_conv2d_3 (UpConv2D)       (None, 100, 100, 3)       28800     \n",
+      "up_conv2d_45 (UpConv2D)      (None, 100, 100, 3)       28800     \n",
       "_________________________________________________________________\n",
-      "activation (Activation)      (None, 100, 100, 3)       0         \n",
+      "activation_9 (Activation)    (None, 100, 100, 3)       0         \n",
       "=================================================================\n",
       "Total params: 39,100,800\n",
       "Trainable params: 39,094,800\n",
@@ -430,37 +430,37 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_2 (InputLayer)         [(None, 100, 100, 3)]     0         \n",
+      "input_19 (InputLayer)        [(None, 100, 100, 3)]     0         \n",
       "_________________________________________________________________\n",
-      "conv2d (Conv2D)              (None, 50, 50, 100)       4800      \n",
+      "conv2d_96 (Conv2D)           (None, 50, 50, 100)       4800      \n",
       "_________________________________________________________________\n",
-      "leaky_relu (LeakyRelu)       (None, 50, 50, 100)       0         \n",
+      "leaky_relu_40 (LeakyRelu)    (None, 50, 50, 100)       0         \n",
       "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 25, 25, 200)       320000    \n",
+      "conv2d_98 (Conv2D)           (None, 25, 25, 200)       320000    \n",
       "_________________________________________________________________\n",
-      "layer_norm (LayerNorm)       (None, 25, 25, 200)       250000    \n",
+      "layer_norm_32 (LayerNorm)    (None, 25, 25, 200)       250000    \n",
       "_________________________________________________________________\n",
-      "leaky_relu_1 (LeakyRelu)     (None, 25, 25, 200)       0         \n",
+      "leaky_relu_41 (LeakyRelu)    (None, 25, 25, 200)       0         \n",
       "_________________________________________________________________\n",
-      "conv2d_4 (Conv2D)            (None, 13, 13, 400)       1280000   \n",
+      "conv2d_100 (Conv2D)          (None, 13, 13, 400)       1280000   \n",
       "_________________________________________________________________\n",
-      "layer_norm_1 (LayerNorm)     (None, 13, 13, 400)       135200    \n",
+      "layer_norm_33 (LayerNorm)    (None, 13, 13, 400)       135200    \n",
       "_________________________________________________________________\n",
-      "leaky_relu_2 (LeakyRelu)     (None, 13, 13, 400)       0         \n",
+      "leaky_relu_42 (LeakyRelu)    (None, 13, 13, 400)       0         \n",
       "_________________________________________________________________\n",
-      "conv2d_6 (Conv2D)            (None, 7, 7, 800)         5120000   \n",
+      "conv2d_102 (Conv2D)          (None, 7, 7, 800)         5120000   \n",
       "_________________________________________________________________\n",
-      "layer_norm_2 (LayerNorm)     (None, 7, 7, 800)         78400     \n",
+      "layer_norm_34 (LayerNorm)    (None, 7, 7, 800)         78400     \n",
       "_________________________________________________________________\n",
-      "leaky_relu_3 (LeakyRelu)     (None, 7, 7, 800)         0         \n",
+      "leaky_relu_43 (LeakyRelu)    (None, 7, 7, 800)         0         \n",
       "_________________________________________________________________\n",
-      "conv2d_8 (Conv2D)            (None, 4, 4, 1600)        20480000  \n",
+      "conv2d_104 (Conv2D)          (None, 4, 4, 1600)        20480000  \n",
       "_________________________________________________________________\n",
-      "layer_norm_3 (LayerNorm)     (None, 4, 4, 1600)        51200     \n",
+      "layer_norm_35 (LayerNorm)    (None, 4, 4, 1600)        51200     \n",
       "_________________________________________________________________\n",
-      "leaky_relu_4 (LeakyRelu)     (None, 4, 4, 1600)        0         \n",
+      "leaky_relu_44 (LeakyRelu)    (None, 4, 4, 1600)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_10 (Conv2D)           (None, 1, 1, 1)           25600     \n",
+      "conv2d_106 (Conv2D)          (None, 1, 1, 1)           25600     \n",
       "=================================================================\n",
       "Total params: 27,745,200\n",
       "Trainable params: 27,745,200\n",
@@ -470,7 +470,7 @@
     }
    ],
    "source": [
-    "gan_model = WGAN_GP(total_images=591, image_size=inputs_shape, z_dim=latents_dim, n_critic=5, batch_size=batch_size)"
+    "gan_model = WGAN_GP(model_name=dataset_name+'_WGAN_GP', image_size=inputs_shape, z_dim=latents_dim, n_critic=5, batch_size=batch_size)"
    ]
   },
   {
@@ -479,31 +479,9 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/100\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b6e1d50cc4c840aa8a4802ae87b20f14",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, layout=Layout(flex='2'), max=576.0), HTML(value='')), …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "gan_model.train(dataset=train_generator, epochs=100)"
+    "gan_model.train(dataset=train_generator, epochs=100, n_itr=100)"
    ]
   },
   {
