--- a/notebooks/WGAN_GP.ipynb
+++ b/notebooks/WGAN_GP.ipynb
@@ -524,12 +524,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e3999f82b964835b9919b71e8e05a66",
+       "model_id": "c3135d246303400f9992191804a098fe",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, layout=Layout(flex='2')), HTML(value='')), layout=Layo…"
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, layout=Layout(flex='2'), max=50.0), HTML(value='')), l…"
       ]
      },
      "metadata": {},
@@ -537,7 +537,7 @@
     }
    ],
    "source": [
-    "gan_model.train(dataset=train_generator, start_epoch=0, epochs=int(2e4), n_itr=100)"
+    "gan_model.train(dataset=train_generator, start_epoch=0, epochs=int(2e4), n_itr=50)"
    ]
   },
   {
