--- a/notebooks/WGAN_GP.ipynb
+++ b/notebooks/WGAN_GP.ipynb
@@ -511,7 +511,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -524,7 +524,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3135d246303400f9992191804a098fe",
+       "model_id": "2a2fb53f179e477a8eaae265c4b8965b",
        "version_major": 2,
        "version_minor": 0
       },
