--- a/notebooks/Pokemon/WGAN_GP.ipynb
+++ b/notebooks/Pokemon/WGAN_GP.ipynb
@@ -177,7 +177,7 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\Kriple\\\\PycharmProjects\\\\pythonProject\\\\PokemonGAN\\\\notebooks'"
+       "'C:\\\\Users\\\\Kriple\\\\PycharmProjects\\\\pythonProject\\\\Rethinking_Data_Effeient_GANs\\\\notebooks\\\\Pokemon'"
       ]
      },
      "execution_count": 8,
@@ -198,7 +198,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Kriple\\PycharmProjects\\pythonProject\\PokemonGAN\n"
+      "C:\\Users\\Kriple\\PycharmProjects\\pythonProject\\Rethinking_Data_Effeient_GANs\\notebooks\n"
      ]
     }
    ],
@@ -243,14 +243,26 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'generators'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-12-c19700028b0e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mgenerators\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_lmdb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlmdb_image_generator\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mget_generators\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'generators'"
+     ]
+    }
+   ],
    "source": [
     "from generators.from_lmdb.lmdb_image_generator import get_generators"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,28 +285,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Kriple\\PycharmProjects\\pythonProject\\PokemonGAN\\transformation\\file_image_generator.py:51: UserWarning: No files found\n",
-      "  warnings.warn(msg)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initializing Iterator training Number of images 591\n",
-      "Initializing Iterator validation Number of images 218\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_generator, val_generator = get_generators(\n",
     "        lmdb_dir=lmdb_dir,\n",
